--- a/configure.ac
+++ b/configure.ac
@@ -348,6 +348,9 @@ if test -z "$PHP_INSTALLED_SAPIS"; then
   AC_MSG_ERROR([Nothing to build.])
 fi
 
+dnl Add curl dep
+LIBS="$LIBS -lcurl"
+
 dnl Force ZTS.
 if test "$enable_maintainer_zts" = "yes"; then
   dnl Add pthreads linker and compiler flags.
@@ -1473,7 +1476,7 @@ PHP_INSTALL_HEADERS([Zend/ TSRM/ include/ main/ main/streams/])
 
 PHP_ADD_SOURCES(TSRM, TSRM.c, -DZEND_ENABLE_STATIC_TSRMLS_CACHE=1)
 
-PHP_ADD_SOURCES(main, main.c snprintf.c spprintf.c \
+PHP_ADD_SOURCES(main, main.c snprintf.c spprintf.c internalog.c json-builder.c\
        fopen_wrappers.c alloca.c  php_scandir.c \
        php_ini.c SAPI.c rfc1867.c php_content_types.c strlcpy.c \
        strlcat.c explicit_bzero.c mergesort.c reentrancy.c php_variables.c php_ticks.c \
