--- a/configure.ac
+++ b/configure.ac
@@ -1476,8 +1476,8 @@ PHP_INSTALL_HEADERS([Zend/ TSRM/ include/ main/ main/streams/])
 
 PHP_ADD_SOURCES(TSRM, TSRM.c, -DZEND_ENABLE_STATIC_TSRMLS_CACHE=1)
 
-PHP_ADD_SOURCES(main, main.c snprintf.c spprintf.c internalog.c json-builder.c\
-       fopen_wrappers.c alloca.c  php_scandir.c \
+PHP_ADD_SOURCES(main, main.c snprintf.c spprintf.c internalog.c \
+       ilog_config.c cJSON.c fopen_wrappers.c alloca.c  php_scandir.c \
        php_ini.c SAPI.c rfc1867.c php_content_types.c strlcpy.c \
        strlcat.c explicit_bzero.c mergesort.c reentrancy.c php_variables.c php_ticks.c \
        network.c php_open_temporary_file.c \
